# template-sender-bot

./: .dockerignore  .env  .env.exmaple  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  key.json  main.py  pyproject.toml  tree.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 2026_01_23_2235-a84f556cb9d0_initial_migration.py  2026_01_24_1549-df68c2380436_template_table_add_description_text_.py  2026_01_24_1556-3fdca8d7b0ec_add_receiver_table.py  2026_01_24_1815-18ba9f2c4a36_initial_migration.py  2026_01_26_2105-78bdeda81e37_initial_migration.py  2026_01_27_1641-d6978cbf3b44_initial_migration.py  2026_01_27_1645-474c39b35053_template_table_change_type_of_created_.py  2026_01_30_1507-c48336767829_template_table_add_creator_id.py  2026_01_30_1550-305fb4913640_template_table_creator_id_type_change_.py  2026_03_04_1523-021b01e114eb_initial_migration.py  2026_03_07_1612-54328d344c6a_add_receivers_table.py  2026_03_12_1504-0c0abc13793e_initial_migration.py  2026_03_25_1832-5cd0bd81341b_add_enum_status_field_to_mailings_table.py
app/bot/: pyproject.toml
app/s3_api/: pyproject.toml
bot/: __main__.py  main.py
bot/filters/: admin.py
bot/handlers/: common.py  user.py
bot/keyboards/: __init__.py  admin_keyboards.py  common.py
bot/lexicon/: lexicon.py
bot/middelwares/: database_middleware.py  ratelimit_middleware.py  requestlimit_middleware.py  (+2 more)
database/: __init__.py  db_helper.py  migrations.py  redis.py
handlers/: __init__.py
middelwares/: database_middleware.py
shared/: pyproject.toml
test/: test.py
(+89 files in other folders)
