[project]
name = "bot-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "aiogram>=3.24.0",
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.129.0",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "structlog>=25.5.0",
]
